Work on Work, skills are still missaligned, otherwise don't see issues

--- a/css/experience.css
+++ b/css/experience.css
@@ -83,10 +83,6 @@
     gap: 16px;
 }
 
-.experience-display-content__tittle {
-
-}
-
 .experience-display-list {
     overflow-y: scroll;
     max-height: 120px;
