--- a/css/skills.css
+++ b/css/skills.css
@@ -11,9 +11,9 @@
     display: flex;
     flex-direction: column;
     gap: 48px;
-    flex-grow: 1;
     align-self: stretch;
     align-items: center;
+    justify-content: center;
 }
 
 .skills-header {
@@ -26,9 +26,9 @@
     display: flex;
     flex-direction: row;
     max-width: 720px;
-    align-self: stretch;
-    align-items: center;
     justify-content: space-between;
+    align-items: center;
+    align-self: stretch;
 }
 
 .skill-card-wrapper {
@@ -38,11 +38,10 @@
     justify-content: center;
     align-self: stretch;
     gap: 8px;
-    width: 90px;
+    width: 102px;
 }
 
 .skill-card__image {
-    align-self: center;
     width: 64px;
     height: 64px;
 }
